testdata/invalid/map_compiler_owned_value.hzn
package probes

map Headers hash[u32, xdp.Eth]
